--- a/Pay365/Pay365Wallet/Views/Account/AccountInfo.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/AccountInfo.cshtml
@@ -493,7 +493,7 @@
                                     </div>
 
                                     <div class="card-button" style="padding-top: 25px">
-                                        {{if Status != 3}}
+                                        {{if Status == 1}}
                                         <a href="javascript:;" onclick="account_info.Vw_ChangeAccountInfo();" class="btn btn-primary btn-flat uppercase waves-effect waves-primary"><i class="material-icons">person</i>@Resources.Account_info.btn_changeAccInfo</a>
                                         {{/if}}
                                     </div>
