--- a/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
@@ -48,7 +48,7 @@
                     <script id="cashout_bank_online_tmpl" type="text/x-jquery-tmpl">
                         {{each listBank}}
                         <div class="box-bank-icon">
-                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'online');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankID}.png" alt=""></a>
+                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'online');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                         </div>
                         {{/each}}
                     </script>
@@ -69,7 +69,7 @@
                     <script id="cashout_bank_tmpl" type="text/x-jquery-tmpl">
                         {{each listBank}}
                         <div class="box-bank-icon">
-                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'offline');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankID}.png" alt=""></a>
+                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'offline');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                         </div>
                         {{/each}}
                     </script>
@@ -406,7 +406,7 @@ else
                     <script id="cashout_bank_online_tmpl" type="text/x-jquery-tmpl">
                         {{each listBank}}
                         <div class="box-bank-icon">
-                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'online');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankID}.png" alt=""></a>
+                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'online');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                         </div>
                         {{/each}}
                     </script>
@@ -427,7 +427,7 @@ else
                     <script id="cashout_bank_tmpl" type="text/x-jquery-tmpl">
                         {{each listBank}}
                         <div class="box-bank-icon">
-                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'offline');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankID}.png" alt=""></a>
+                            <a href="javascript:;" onclick="cashout.CashoutBankDetail(this, 'offline');" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                         </div>
                         {{/each}}
                     </script>
