--- a/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
+++ b/Pay365/Pay365Wallet/Views/Topup/TopupBank.cshtml
@@ -50,7 +50,7 @@
                     <script id="topup_bank_tmpl" type="text/x-jquery-tmpl">
                         {{each listBank}}
                         <div class="box-bank-icon">
-                            <a href="javascript:;" onclick="topup.TopupBankDetail(this);" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankID}.png" alt=""></a>
+                            <a href="javascript:;" onclick="topup.TopupBankDetail(this);" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                         </div>
                         {{/each}}
                     </script>
@@ -273,7 +273,7 @@ else
                     <script id="topup_bank_tmpl" type="text/x-jquery-tmpl">
                         {{each listBank}}
                         <div class="box-bank-icon">
-                            <a href="javascript:;" onclick="topup.TopupBankDetail(this);" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankID}.png" alt=""></a>
+                            <a href="javascript:;" onclick="topup.TopupBankDetail(this);" data-serviceid="${$value.CushInServiceID}" data-bankname="${$value.BankName}" data-bankcode="${$value.BankCode}" data-bankinfo="${$value.BankID}#${$value.BankCode}#${$value.BankName}" class="bank-icon" title="${$value.BankCode}-${$value.BankName}"><img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/brands/logo-banks/${$value.BankCode}.png" alt=""></a>
                         </div>
                         {{/each}}
                     </script>
