--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -114,7 +114,7 @@
                                         <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-phone' style="color: #333"><i class="material-icons" style="">keyboard_arrow_down</i></a>
                                         <ul id='ddr-input-phone' class='dropdown-content'></ul>
                                     </div>
-                                    <input type="text" placeholder="@Resources.Payment.String7" id="txtPhoneNumber" maxlength="13" onkeypress="utils.checkOnlyNumber(this, event);" onkeyup="utils.formatPhoneInput(this, event); utils.ChangeText(event); payment.GetListAmount(this, 'ddr-select-amount');">
+                                    <input type="text" placeholder="@Resources.Payment.String7" id="txtPhoneNumber" maxlength="13" onkeypress="utils.checkOnlyNumber(this, event);" onkeyup="utils.formatPhoneInput(this, event); utils.ChangeText(event); payment.GetListAmount(this);">
                                     <span class="error-text"></span>
                                     <span class="success-text"></span>
                                 </div>
@@ -134,8 +134,8 @@
                             <div class="form-group input-field">
                                 <div class="icon"><i class="material-icons"></i></div>
                                 <div class="form-data">
-                                    <div class="col-sm-6 left-align"><span class="label label-danger">@Resources.Payment.value8 <span id="discount">0%</span></span></div>
-                                    <div class="col-sm-6 right-align"><p><strong class="primary">@Resources.Payment.String13: <span id="totalAmount">0<sup>VNĐ</sup></span></strong></p></div>
+                                    <div class="col-sm-4 left-align"><span class="label label-danger">@Resources.Payment.value8 <span id="discount">0%</span></span></div>
+                                    <div class="col-sm-8 right-align"><p><strong class="primary">@Resources.Payment.String13: <span id="totalAmount">0<sup>VNĐ</sup></span></strong></p></div>
                                 </div>
                             </div>
                             <div class="alert alert-danger center" style="display:none"></div>
@@ -198,8 +198,8 @@
                             <div class="form-group input-field">
                                 <div class="icon"><i class="material-icons"></i></div>
                                 <div class="form-data">
-                                    <div class="col-sm-6 left-align"><span class="label label-danger">@Resources.Payment.value8 <span id="discountGame">0%</span></span></div>
-                                    <div class="col-sm-6 right-align"><p><strong class="primary">@Resources.Payment.String13: <span id="totalAmountGame">0<sup>VNĐ</sup></span></strong></p></div>
+                                    <div class="col-sm-4 left-align"><span class="label label-danger">@Resources.Payment.value8 <span id="discountGame">0%</span></span></div>
+                                    <div class="col-sm-8 right-align"><p><strong class="primary">@Resources.Payment.String13: <span id="totalAmountGame">0<sup>VNĐ</sup></span></strong></p></div>
                                 </div>
                             </div>
                             <div class="alert alert-danger center" style="display:none"></div>
