sửa cú pháp PAY365 -> P365, 8095 -> 8100

--- a/Framework/Pay365/src/Pay365.Pay365.Web/App/common/views/layout/footer.cshtml
+++ b/Framework/Pay365/src/Pay365.Pay365.Web/App/common/views/layout/footer.cshtml
@@ -1,10 +1,10 @@
 @using Pay365.Pay365
 <div class="page-footer-inner">
     <span class="text-muted">
-        <small>
+        @*<small>
             {{vm.getProductNameWithEdition()}} <br/>
             v@(AppVersionHelper.Version) [@AppVersionHelper.ReleaseDate.ToString("yyyyMMdd")]
-        </small>
+        </small>*@
     </span>
 </div>
 <div class="scroll-to-top">
