--- a/Pay365/Pay365Wallet/Views/AccountSecure/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/AccountSecure/Index.cshtml
@@ -73,7 +73,7 @@
                                         <img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/security-app.svg" alt="">
                                     </div>
                                     <div class="description">
-                                        @Resources.Account.NoteOTPApp <strong class="secondary">Pay365 OTP</strong> @Resources.Account.getVerifyCode
+                                        @Resources.Account.NoteOTPApp <strong class="secondary">P365 OTP</strong> @Resources.Account.getVerifyCode
                                         <p class="hm primary">@Resources.Account.Limitation: <span class="LimitCurrent"></span></p>
                                     </div>
                                     <div class="button">
@@ -131,7 +131,7 @@
                                             </li>
                                         </ul>
                                         <p>
-                                            @Resources.Account.TextSMS: <strong class="secondary">PAY365 OTP DK [@Resources.Account.Limitation OTP]</strong> @Resources.Account.Send <strong class="secondary">8095</strong>.
+                                            @Resources.Account.TextSMS: <strong class="secondary">P365 OTP DK [@Resources.Account.Limitation OTP]</strong> @Resources.Account.Send <strong class="secondary">8100</strong>.
                                         </p>
                                         <p>@Resources.Account.NoteOTP1</p>
                                     </div>
