--- a/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Cashout/Cashout.cshtml
@@ -299,7 +299,7 @@
                 <label for="otp_2">@Resources.Account_info.lbl_otp</label>
                 <span class="error-text"></span>
             </div>
-            @*<p id="p2_securecode" style="margin-left: 5px; display: none;">@Resources.Cashout.String26: <span class="secondary">PAY365 OTP @Resources.Cashout.String27 8100</span>&nbsp;@Resources.Cashout.String28</p>*@
+            @*<p id="p2_securecode" style="margin-left: 5px; display: none;">@Resources.Cashout.String26: <span class="secondary">P365 OTP @Resources.Cashout.String27 8100</span>&nbsp;@Resources.Cashout.String28</p>*@
         </div>
 
         <div class="card-button">
@@ -657,7 +657,7 @@ else
                 <label for="otp_2">@Resources.Account_info.lbl_otp</label>
                 <span class="error-text"></span>
             </div>
-            @*<p id="p2_securecode" style="margin-left: 5px; display: none;">@Resources.Cashout.String26: <span class="secondary">PAY365 OTP @Resources.Cashout.String27 8100</span>&nbsp;@Resources.Cashout.String28</p>*@
+            @*<p id="p2_securecode" style="margin-left: 5px; display: none;">@Resources.Cashout.String26: <span class="secondary">P365 OTP @Resources.Cashout.String27 8100</span>&nbsp;@Resources.Cashout.String28</p>*@
         </div>
 
         <div class="card-button">
