--- a/Pay365/Pay365Wallet/Views/Home/_LoginOTP.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/_LoginOTP.cshtml
@@ -22,7 +22,7 @@
             </div>
         </div>
         <p>
-            @Resources.Register.String20 <strong class="danger">PAY365 OTP</strong> @Resources.Register.String21 <strong class="danger">8100</strong> <span class="warning">(1.000VNĐ/SMS)</span>
+            @Resources.Register.String20 <strong class="danger">P365 OTP</strong> @Resources.Register.String21 <strong class="danger">8100</strong> <span class="warning">(1.000VNĐ/SMS)</span>
         </p>
     </div>
 </div>
