--- a/Pay365/Pay365Wallet/Views/Register/_ActiveAccount.cshtml
+++ b/Pay365/Pay365Wallet/Views/Register/_ActiveAccount.cshtml
@@ -24,7 +24,7 @@
             </div>
         </div>
         <p>
-            @Resources.Register.String20 <strong class="secondary">PAY365 KH</strong> @Resources.Register.String21 <strong class="secondary">8095</strong> (1.000<sup>VNĐ</sup>/SMS)
+            @Resources.Register.String20 <strong class="secondary">P365 KH</strong> @Resources.Register.String21 <strong class="secondary">8100</strong> (1.000<sup>VNĐ</sup>/SMS)
         </p>
     </div>
 </div>
