--- a/Pay365/Pay365Wallet/Views/Cashout/_CashoutBankOnlineDetail.cshtml
+++ b/Pay365/Pay365Wallet/Views/Cashout/_CashoutBankOnlineDetail.cshtml
@@ -129,7 +129,7 @@
                             <label for="otp_2">@Resources.Transfer.OTP</label>
                             <span class="error-text"></span>
                         </div>
-                        <p id="p2_securecode" style="margin-left: 5px; display: none;">@Resources.Cashout.String26: <span class="secondary">PAY365 OTP @Resources.Cashout.String27 8095</span>&nbsp;@Resources.Cashout.String28</p>
+                        <p id="p2_securecode" style="margin-left: 5px; display: none;">@Resources.Cashout.String26: <span class="secondary">P365 OTP @Resources.Cashout.String27 8100</span>&nbsp;@Resources.Cashout.String28</p>
                     </div>
 
                     <div class="card-button">
