--- a/Pay365/Pay365Wallet/Views/Home/Guide.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/Guide.cshtml
@@ -19,6 +19,11 @@
             </div>
         </div>
     </section>
+    <script type="text/javascript">
+        if (utils.getParameterByName('source') === 'mobile') {
+            $('header.header, section.main-top').hide();
+        }
+    </script>
     <div class="dashboard">
         <section class="page-section">
             <div class="page-head">
