--- a/Pay365/Pay365Wallet/Views/Home/GuideDetail.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/GuideDetail.cshtml
@@ -22,6 +22,7 @@
     </section>
     <script type="text/javascript">
         var ua = navigator.userAgent;
+        alert(ua);
         if (((ua.indexOf('Mozilla/5.0') > -1 && ua.indexOf('Android ') > -1 && ua.indexOf('AppleWebKit') > -1) && (ua.indexOf('Version') > -1))) {
             $('header.header, section.main-top').hide();
         }
